samples/_failures_safe/1761082354_424597_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_920e4bb4.c: In function ‘matrix_subtract’:
./samples/SAFE/__tmp_920e4bb4.c:164:9: error: expected declaration or statement at end of input
  164 |         result->data[i] = malloc(result->cols * sizeof(int));
      |         ^~~~~~
./samples/SAFE/__tmp_920e4bb4.c:164:9: error: expected declaration or statement at end of input
